# advent-of-code-2022

./: .gitignore  Cargo.toml  README.md  test
benches/: aoc_benchmark.rs
src/: communication_system.rs  lib.rs  main.rs  profiler.rs
src/day1/: README.md  mod.rs
src/day10/: README.md  mod.rs
src/day11/: README.md  mod.rs
src/day2/: README.md  mod.rs
src/day3/: README.md  mod.rs
src/day4/: README.md  mod.rs
src/day5/: README.md  mod.rs
src/day6/: README.md  mod.rs
src/day7/: README.md  mod.rs
src/day8/: README.md  mod.rs
src/day9/: README.md  mod.rs
src/template/: mod.rs
