[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
lazy_static = "1.4"
log = "0.4.17"
simple_logger = "4"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "aoc_benchmark"
harness = false

[profile.release]
debug = true