[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"
default-run = "advent-of-code-2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
lazy_static = "1.4"
log = "0.4.17"
simple_logger = "4"
logging-allocator = "0.1.1"
anyhow = "1"
ahash = "0.8.2"

[dev-dependencies]
criterion = "0.4"
iai = "0.1"

[[bench]]
name = "aoc_benchmark"
harness = false

[[bin]]
name = "profiler"
path = "src/profiler.rs"

[profile.release]
debug = true